[gd_scene load_steps=4 format=3 uid="uid://cguo6ea88iosr"]

[ext_resource type="Script" path="res://lib/menu/menu.gd" id="1_67qmn"]
[ext_resource type="Theme" uid="uid://buclk0ly46ywm" path="res://lib/default_theme/default_theme.tres" id="2_u2cqx"]
[ext_resource type="PackedScene" uid="uid://cuvjhwp2a5q2t" path="res://addons/leader_board/high_score_panel.tscn" id="3_es20d"]

[node name="Menu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_67qmn")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -158.0
offset_right = 229.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_u2cqx")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RestartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Restart
"

[node name="LeaderBoardButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Best Scores"

[node name="CancelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Cancel"

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="HighScorePanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.0
offset_top = -281.5
offset_right = 173.0
offset_bottom = 281.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_u2cqx")

[node name="VBoxContainer" type="VBoxContainer" parent="HighScorePanelContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HighScorePanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HighScoreContainer" parent="HighScorePanelContainer/VBoxContainer/ScrollContainer" instance=ExtResource("3_es20d")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CloseHighScoreButton" type="Button" parent="HighScorePanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/LeaderBoardButton" to="." method="_on_leader_board_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="HighScorePanelContainer/VBoxContainer/CloseHighScoreButton" to="." method="_on_close_high_score_button_pressed"]
